implemented the cart feature
